--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,11 @@ dependencies {
 
     //Palette
     implementation 'androidx.palette:palette-ktx:1.0.0'
+
+    //Input Mask
+    implementation 'com.github.santalu:mask-edittext:1.1.1'
+
+    //SelectGalleryImage
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'io.github.ParkSangGwon:tedimagepicker:1.3.2'
 }
